--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
 }
 
+apply plugin: 'dagger.hilt.android.plugin'
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -39,8 +41,9 @@ dependencies {
     testImplementation "org.mockito:mockito-core:3.10.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+    implementation "com.google.dagger:hilt-android:2.36"
+    implementation "com.google.dagger:hilt-compiler:2.36"
 
     // ROOM
     def room_version = "2.3.0"
