--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
     implementation "com.google.dagger:hilt-android:2.36"
     implementation "com.google.dagger:hilt-compiler:2.36"
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
 
     // ROOM
     def room_version = "2.3.0"
