--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
     implementation "androidx.multidex:multidex:2.0.1"
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 
     // TESTING
     testImplementation 'junit:junit:4.13.2'
