Make support large screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,12 +5,13 @@
     <application
         android:name=".RealEstateManagerApp"
         android:allowBackup="false"
+        android:largeHeap="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RealEstateManager">
-        <activity android:name=".ui.detail.DetailActivity"
+        <activity android:name=".ui.detail.PropertyDetailActivity"
             android:parentActivityName=".ui.main.MainActivity"/>
 
         <activity
