--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,12 @@ android {
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file("local.properties").newDataInputStream())
+
+        manifestPlaceholders = ["GOOGLE_MAP_API_KEY" : properties.getProperty("GOOGLE_MAP_API_KEY")]
+
     }
 
     buildTypes {
@@ -49,6 +55,11 @@ dependencies {
     implementation "androidx.multidex:multidex:2.0.1"
     implementation 'com.github.dhaval2404:imagepicker:2.1'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'pub.devrel:easypermissions:3.0.0'
+
+    // GOOGLE_SERVICES
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 
     // TESTING
     testImplementation 'junit:junit:4.13.2'
