--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,28 +2,45 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.berete.realestatemanager">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:name=".RealEstateManagerApp"
         android:allowBackup="false"
-        android:largeHeap="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RealEstateManager">
-        <activity android:name=".ui.detail.PropertyDetailActivity"
-            android:parentActivityName=".ui.main.MainActivity"/>
 
-        <activity
-            android:name=".ui.edit.EditPropertyActivity"
-            android:parentActivityName=".ui.main.MainActivity"/>
-        <activity android:name=".ui.main.MainActivity">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="${GOOGLE_MAP_API_KEY}" />
+
+        <activity android:name=".ui.core.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ui.map.MapActivity"
+            android:theme="@style/TransparentStatusBarTheme"
+            android:parentActivityName=".ui.core.MainActivity" />
+
+        <activity
+            android:name=".ui.detail.PropertyDetailActivity" />
+
+        <activity
+            android:name=".ui.edit.EditPropertyActivity"
+            android:parentActivityName=".ui.core.MainActivity" />
+
+        <activity
+            android:name=".ui.loan_calculator.LoanCalculatorActivity"
+            android:parentActivityName=".ui.core.MainActivity" />
+
     </application>
 
 </manifest>
