--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation 'com.github.dhaval2404:imagepicker:2.1'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'pub.devrel:easypermissions:3.0.0'
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
 
     // GOOGLE_SERVICES
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
