--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,8 @@ android {
         Properties properties = new Properties()
         properties.load(project.rootProject.file("local.properties").newDataInputStream())
 
-        manifestPlaceholders = ["GOOGLE_MAP_API_KEY" : properties.getProperty("GOOGLE_MAP_API_KEY")]
+        manifestPlaceholders = ["GOOGLE_MAP_API_KEY": properties.getProperty("GOOGLE_MAP_API_KEY")]
+        buildConfigField "String", "GOOGLE_MAP_STATIC_API_KEY", "\"${properties.getProperty("GOOGLE_MAP_STATIC_API_KEY")}\""
 
     }
 
@@ -37,6 +38,7 @@ android {
     }
 
     testOptions {
+        unitTests.includeAndroidResources = true
         unitTests.returnDefaultValues = true
     }
 
@@ -60,7 +62,6 @@ dependencies {
     implementation 'com.github.dhaval2404:imagepicker:2.1'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'pub.devrel:easypermissions:3.0.0'
-    testImplementation "androidx.arch.core:core-testing:2.1.0"
 
     // GOOGLE_SERVICES
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
@@ -71,11 +72,17 @@ dependencies {
     testImplementation "org.mockito:mockito-core:3.10.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation "org.robolectric:robolectric:4.5.1"
+    testImplementation 'androidx.test:core:1.3.0'
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
 
     // HILT
     def hilt_version = "2.36"
     implementation "com.google.dagger:hilt-android:$hilt_version"
     annotationProcessor "com.google.dagger:hilt-compiler:$hilt_version"
+        // hilt_testing
+    androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
+    androidTestAnnotationProcessor "com.google.dagger:hilt-android-compiler:$hilt_version"
 
     // ROOM
     def room_version = "2.3.0"
