--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.1"
+        classpath 'com.android.tools.build:gradle:4.2.1'
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.36'
 
         // NOTE: Do not place your application dependencies here; they belong
